--- a/src/sass/_cat.scss
+++ b/src/sass/_cat.scss
@@ -2,8 +2,12 @@ body{
 	padding-top: 20px;
 }
 
-.breed-select{
+.ss-main{
 	width: 300px;
+}
+
+.breed-select{
+	// width: 300px;
 	margin-left: 40px;
 	margin-bottom: 40px;
 }
